infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: api.nout.test
      http:
        paths:
          - path: /api/auth/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 4000
